<package>
  <name>usb_cam_opencv</name>
  <version>0.3.6</version>
  <description>ROS_opencv_Video</description>

  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  <maintainer email="ros-orphaned-packages@googlegroups.com">ROS Orphaned Package Maintainers</maintainer>
  <author email="benjamin.pitzer@bosch.com">Benjamin Pitzer</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/usb_cam</url>
  <url type="bugtracker">https://github.com/bosch-ros-pkg/usb_cam/issues</url>
  <url type="repository">https://github.com/bosch-ros-pkg/usb_cam</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>image_transport</build_depend> 
  <build_depend>roscpp</build_depend> 
  <build_depend>std_msgs</build_depend> 
  <build_depend>cv_bridge</build_depend> 
  <build_depend>sensor_msgs</build_depend> 

  <run_depend>image_transport</run_depend> 
  <run_depend>roscpp</run_depend> 
  <run_depend>std_msgs</run_depend> 
  <run_depend>cv_bridge</run_depend> 
  <run_depend>sensor_msgs</run_depend> 

</package>
